<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.mlsdevstore.presentaion.account.EditAccountViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_edit"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@android:color/white" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/label_personal_info"
                style="@style/UserInfoTextStyle.Header"
                android:layout_marginBottom="8dp"
                android:text="@string/label_personal_info" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                bind:error="@{viewModel.emailError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{() -> viewModel.onEmailTextChanged()}"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                bind:error="@{viewModel.firstNameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{() -> viewModel.onFirstNameTextChanged()}"
                    android:text="@={viewModel.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                bind:error="@{viewModel.lastNameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{() -> viewModel.onLastNameTextChanged()}"
                    android:text="@={viewModel.lastName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_button"
                style="@style/AccentButton"
                android:layout_gravity="end"
                android:onClick="@{() -> viewModel.onSubmitPersonalInfoClick()}"
                android:text="@string/btn_submit"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>
</layout>