...

    <!--Errors-->
    <string name="error_message_common">Something went wrong. Try again later.</string>
    <string name="error_message_network">Check your internet connection and try again.</string>
    <string name="error_message_tech">Technical error occurred. Please, try again later</string>
    <string name="error_title_base">Issue</string>
    <string name="error_empty_field">is empty</string>
    <string name="error_not_found">not found</string>
    <string name="error_incorrect_field">is incorrect</string>

    <!--Button-->
    <string name="button_close">Close</string>
    <string name="title_categories">Categories</string>
    <string name="btn_description">description</string>

...
